# ML_E_TO_E_bikes

./: .gitignore  LICENSE  MLops.code-workspace  poetry.toml  pyproject.toml
notebooks/: prototype.ipynb
src/: hello.py
src/bikes/: __init__.py  __main__.py  scripts.py  settings.py
src/bikes/core/: __init__.py  metrics.py  models.py  schemas.py
src/bikes/io/: configs.py
src/bikes/utils/: splitters.py
src/mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
