[project]
name = "mlops"
version = "0.1.0"
description = "Predict the number of bikes available"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.0",
]
keywords = ["mlops","python","package"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


