[project]
name = "mlops"
version = "0.1.0"
description = "Predict the number of bikes available"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "matplotlib>=3.9.3",
    "mlflow>=2.19.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pandera>=0.21.0",
    "plotly>=5.24.1",
    "plyer>=2.1.0",
    "psutil>=6.1.0",
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.3",
    "pynvml>=12.0.0",
    "scikit-learn>=1.5.2,<1.6.0",
    "setuptools>=75.6.0",
    "shap>=0.46.0",
]
keywords = ["mlops","python","package"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
checkers = [
    "bandit>=1.8.0",
    "coverage>=7.6.8",
    "mypy>=1.13.0",
    "pandera[mypy]>=0.21.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]

[project.scripts]
bikes = "bikes.scripts:main"




[tool.mypy]
pretty = true
python_version = "3.12"
checked_untyped_defs = true
ignore_missing_imports = true
plugins = ["pandera.mypy","pydantic.mypy"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention="google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.pytest.ini_options]
addopts = "--verbose=2"
pythonpath = ["src"]

[tool.bandit]
targets = ["src"]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

